crates/core/tests/snapshots/integration__dryrun-tar-tree-nix.snap
---
source: crates/core/tests/integration.rs
expression: tree
---
Tree(
  nodes: [
    {
      "name": "empty-file",
      "type": "file",
      "mode": "[some]",
      "mtime": "[some]",
      "atime": "[some]",
      "ctime": "[some]",
      "uid": "[uid]",
      "gid": "[gid]",
      "user": "[user]",
      "group": "[group]",
      "inode": "[inode]",
      "device_id": "[device_id]",
      "links": 1,
      "content": Some([]),
    },
    {
      "name": "testfile",
      "type": "file",
      "mode": "[some]",
      "mtime": "[some]",
      "atime": "[some]",
      "ctime": "[some]",
      "uid": "[uid]",
      "gid": "[gid]",
      "user": "[user]",
      "group": "[group]",
      "inode": "[inode]",
      "device_id": "[device_id]",
      "size": 21,
      "links": 2,
      "content": Some([
        Id("649b8b471e7d7bc175eec758a7006ac693c434c8297c07db15286788c837154a"),
      ]),
    },
    {
      "name": "testfile-hardlink",
      "type": "file",
      "mode": "[some]",
      "mtime": "[some]",
      "atime": "[some]",
      "ctime": "[some]",
      "uid": "[uid]",
      "gid": "[gid]",
      "user": "[user]",
      "group": "[group]",
      "inode": "[inode]",
      "device_id": "[device_id]",
      "size": 21,
      "links": 2,
      "content": Some([
        Id("649b8b471e7d7bc175eec758a7006ac693c434c8297c07db15286788c837154a"),
      ]),
    },
    {
      "name": "testfile-symlink",
      "type": "symlink",
      "link_target": "testfile",
      "mode": "[some]",
      "mtime": "[some]",
      "atime": "[some]",
      "ctime": "[some]",
      "uid": "[uid]",
      "gid": "[gid]",
      "user": "[user]",
      "group": "[group]",
      "inode": "[inode]",
      "device_id": "[device_id]",
      "size": 8,
      "links": 1,
      "content": None,
    },
  ],
)
