crates/core/tests/snapshots/integration__find-matching-existing-windows.snap
---
source: crates/core/tests/integration.rs
expression: snap
---
([
  "test/0/tests/testfile",
], [
  [
    (0, 0),
  ],
])
