crates/core/tests/snapshots/integration__find-matching-nodes-not-found-nix.snap
---
source: crates/core/tests/integration.rs
expression: snap
---
FindMatches(
  paths: [],
  nodes: [],
  matches: [
    [],
  ],
)
