crates/core/tests/snapshots/integration__find-matching-wildcard-existing-windows.snap
---
source: crates/core/tests/integration.rs
expression: snap
---
([
  "test\\0\\tests\\testfile",
  "test\\0\\tests\\testfile-hardlink",
  "test\\0\\tests\\testfile-symlink",
], [
  [
    (0, 0),
    (1, 1),
    (2, 2),
  ],
])
